Remove custom bootstrapper